// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cature preview component should renders correctly for image 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "black",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "file://someimage.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`cature preview component should renders correctly for video 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "black",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <MindsVideoV2
      video={
        Object {
          "uri": "file://somevideo.mp4",
        }
      }
    />
  </View>
</View>
`;
